@@ -86,6 +86,10 @@ production.
 * Added the ability to limit the wall clock time used by shell processes,
   as well as the CPU time. Configurable with $wgMaxShellWallClockTime.
 * Added $wgWhitelistReadRegexp for regex whitelisting
+* New configuration variables $wgNoReferrerLinks, $wgNoReferrerNsExceptions,
+  and $wgNoReferrerDomainExceptions can be used to add rel="noreferrer" to
+  external links for privacy purposes. Also adds a user option for overriding
+  the default NoReferrer settings.
 
 === Bug fixes in 1.21 ===
 * (bug 40353) SpecialDoubleRedirect should support interwiki redirects.
